--- a/plam/package.json
+++ b/plam/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mediapipe/camera_utils": "^0.3.1675466862",
+    "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/hands": "^0.4.1675469240",
     "@tailwindcss/vite": "^4.1.4",
     "@tensorflow-models/handpose": "^0.1.0",
